2018-01-29      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/m2type.c:
          (m2type_BuildProcTypeParameterDeclaration) no longer
          layout the paramater type at this time (as it might be a
          recursive usage of the proctype).
	* gm2/Make-lang.in:  removed duplicate and incorrect rule.
          Changed rule for building C files to the correct directory.

2018-01-28      Gaius Mulley <gaius@gnu.org>

	* gm2/m2.flex:  change linelen to int rather than
          unsigned int, a mismatch found when building for
          cygwin.
	* gm2/gm2-gcc/gcc-consolidation.h:  #include "stringpool.h"
	* gm2/gm2-compiler/M2Base.mod:  removed unnecessary forward
          declarations.  (PushSizeOf)  does not assume the fixed
          fixed complex data types exist, uses constants instead.
	* gm2/gm2-gcc/m2type.c:  (build_m2_specific_size_type)
          checks to see if the REAL_TYPE with a desired precision
          exists.  NULL is returned if the target does not support
          the data type.

2017-10-17      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/gm2lcc.mod:  removed unnecessary prototypes.
          ObjectArray remember the objects on the command line.
          ConCatObject only concat an object if it does not exist on
          the command line.  IsAnObject recode as a function.
          --main-object specify an object is the main.
	* gm2/gm2spec.c:  (lang_specific_driver) test against
          OPT_SPECIAL_input_file instead of OPT_SPECIAL_ignore.
	* gm2/lang-specs.h:  pass all objects on the command line
          to gm2lcc so it can remove these objects from
          being automatically included in the archive.
	* testsuite/gm2/pim/run/pass/nestedwith3.mod:  corrected module
          name.
	* gm2/gm2-libs-ch/getopt.c:  New file.
	* gm2/gm2-libs/getopt.def:  New file.
	* gm2/gm2-libs/GetOpt.def:  New file.
	* gm2/gm2-libs/GetOpt.mod:  New file.

2017-07-27      Gaius Mulley <gaius@gnu.org>
